<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/directionsmenu"
              android:clickable="false"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="bottom"
              android:visibility="visible">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.Android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <android.support.v7.widget.Toolbar
                        android:id="@+id/directions_toolbar"
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.Android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/primary"
                        app:contentInsetEnd="0dp"
                        app:contentInsetStart="0dp"
                        android:visibility="visible"
                        android:alpha="0.95"/>
                    <TextView
                        android:id="@+id/directions_toolbar_text"
                        android:text="@string/directions_routeto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white"
                        android:textIsSelectable="false"
                        android:paddingLeft="16dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/directions_toolbar_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/cancel"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"
            android:paddingRight="16dp"/>

    </RelativeLayout>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView"
        android:nestedScrollingEnabled="false"
        android:clickable="true"
        android:background="@color/white"
        android:scrollbars="none"
        android:scrollIndicators="none">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/directionslayout_background"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:background="@android:color/transparent"
                android:layout_marginLeft="150dp"
                >
            </LinearLayout>
            <LinearLayout
                android:id="@+id/directionslayout_forground"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:background="@android:color/transparent"
                >
            </LinearLayout>
        </FrameLayout>
    </HorizontalScrollView>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:id="@+id/directionslayout_buttongrid"
        android:columnCount="2"
        android:rowCount="1"
        android:clickable="true"
        android:focusableInTouchMode="false"
        android:foreground="@android:color/transparent">
        <Button
            android:id="@+id/directionslayout_previousbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/black"
            android:singleLine="true"
            android:focusable="false"
            android:clickable="true"
            android:layout_row="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="64dp"/>

        <Button
            android:id="@+id/directionslayout_nextbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/white"
            android:singleLine="true"
            android:focusable="false"
            android:clickable="true"
            android:layout_row="0"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/accent"/>
    </GridLayout>
</LinearLayout>