<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/locationmenu"
    android:background="#00FFFFFF"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@android:style/Widget.ScrollView"
    android:visibility="gone">
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:id="@+id/menuheader">

        <ImageView
            android:id="@+id/topimage"
            android:contentDescription="@string/desc"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            android:background="@color/primary" />

        <FrameLayout
            android:id="@+id/locations_backbutton_frame"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_below="@+id/topimage"
            android:background="#FFF0F0F0">
            <ImageButton
                android:id="@+id/locations_backbutton"
                android:contentDescription="@string/desc"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:clickable="true"
                android:layout_margin="16dp"
                android:src="@drawable/back"
                android:tint="@color/primary"
                android:background="@android:color/transparent"
                android:layout_gravity="center_vertical"/>
        </FrameLayout>

        <ListView
            android:id="@+id/itemlist"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/transparent"
            android:dividerHeight="0dp"
            android:divider="#00FFFFFF"
            android:layout_below="@+id/locations_backbutton_frame"
            android:layout_above="@+id/directionslayout_buttongrid"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="#FFF0F0F0"
            android:orientation="horizontal"
            android:id="@+id/directionslayout_buttongrid"
            android:columnCount="2"
            android:rowCount="1"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <Button
                android:id="@+id/locations_gotobutton"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/show_on_map"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:textColor="@android:color/black"
                android:singleLine="true"
                android:focusable="false"
                android:clickable="true"
                android:layout_gravity="center_vertical"/>
            <Button
                android:id="@+id/locations_routebutton"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/route"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:textColor="@android:color/white"
                android:singleLine="true"
                android:focusable="false"
                android:clickable="true"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/accent"/>
        </GridLayout>
    </RelativeLayout>
</LinearLayout>
