<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/directionsfullmenu_title"
              android:layout_width="fill_parent"
              android:layout_height="match_parent"
              android:background="@color/primary"
              android:orientation="vertical"
              android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        >

        <ImageView
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:id="@+id/imageExit"
            android:src="@drawable/back"
            android:contentDescription="@string/desc"
            android:layout_marginTop="12dp"/>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:id="@+id/imageViewWalk"
            android:src="@drawable/locationmenu_walk"
            android:layout_alignParentEnd="false"
            android:layout_toLeftOf="@+id/imageViewBicycle"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/desc"/>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:id="@+id/imageViewBicycle"
            android:src="@drawable/ic_directions_bicycle"
            android:layout_alignParentEnd="false"
            android:layout_toLeftOf="@+id/imageViewTransit"
            android:layout_marginTop="12dp"
            android:alpha="0.5"
            android:contentDescription="@string/desc"/>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:id="@+id/imageViewTransit"
            android:src="@drawable/ic_directions_bus"
            android:layout_alignParentEnd="false"
            android:layout_toLeftOf="@+id/imageVehicleCar"
            android:layout_marginTop="12dp"
            android:alpha="0.5"
            android:contentDescription="@string/desc"/>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:id="@+id/imageVehicleCar"
            android:src="@drawable/ic_directions_car"
            android:alpha="0.5"
            android:contentDescription="@string/desc"
            android:layout_alignTop="@+id/imageViewTransit"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        >

        <ImageView
            android:layout_width="48dp"
            android:layout_height="fill_parent"
            android:id="@+id/imageView"
            android:src="@drawable/directionsmenu_p2p"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/desc"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toLeftOf="@+id/imageSwitchSrcDst"
            android:layout_toStartOf="@+id/imageSwitchSrcDst">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="24dp"
                android:id="@+id/editTextFrom"
                android:background="@color/primary_dark"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="#ffffff"
                android:text="@string/my_position"
                android:paddingStart="4dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"
                android:singleLine="true"
                android:contentDescription="@string/desc"
                android:textIsSelectable="false"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="24dp"
                android:id="@+id/editTextTo"
                android:background="@color/primary_dark"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="#ffffff"
                android:paddingStart="4dp"
                android:text="ISAC IT-STUD"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"
                android:singleLine="true"
                android:contentDescription="@string/desc"/>

        </LinearLayout>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:id="@+id/imageSwitchSrcDst"
            android:src="@drawable/swap_vert"
            android:layout_gravity="right|center_vertical"
            android:layout_alignParentEnd="true"
            android:layout_margin="4dp"
            android:contentDescription="@string/desc"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchAvoidStairs"
            android:checked="false"
            android:layout_marginLeft="48dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avoid_stairs"
            android:id="@+id/textView"
            android:layout_marginLeft="8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:contentDescription="@string/desc"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/directionslayout_route"
            android:layout_above="@+id/directionslayout_buttongrid"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/verticalScrollView"
                android:nestedScrollingEnabled="false"
                android:clickable="true"
                android:background="@color/white"
                android:scrollbars="none"
                android:scrollIndicators="none">

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/directionslayout_background"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@android:color/transparent"
                        >

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/directionslayout_forground"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@android:color/transparent"/>

                </FrameLayout>
            </ScrollView>

            <ProgressBar
                android:id="@+id/workingProgressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="false"
                android:alpha="0"
                android:visibility="visible"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="bottom"
            android:background="#ffffff"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:id="@+id/directionslayout_buttongrid">

            <Button
                android:id="@+id/showonmap"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/show_on_map"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:textColor="@android:color/white"
                android:singleLine="true"
                android:focusable="false"
                android:clickable="true"
                android:layout_gravity="center_vertical|right"
                android:backgroundTint="@color/accent"
                android:layout_marginRight="16dp"/>
        </FrameLayout>
    </RelativeLayout>

</LinearLayout>
